--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,10 @@
 {
-    "recommendations": [
-        "ms-vscode.vscode-node-azure-pack",
-        "ms-azuretools.vscode-docker",
-        "ms-dotnettools.csharp",
-        "ms-vsliveshare.vsliveshare-pack",
-        "ms-vscode.vscode-typescript-tslint-plugin"
-    ]
+  "recommendations": [
+    "ms-vscode.vscode-node-azure-pack",
+    "ms-azuretools.vscode-docker",
+    "ms-dotnettools.csharp",
+    "ms-vsliveshare.vsliveshare-pack",
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "editorconfig.editorconfig"
+  ]
 }
